mongo.app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mongo-express
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - alimk8s.me
  #     secretName: tls-secret
  rules:
    - host: alimk8s.me #aliminikube.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: internal-mongo-express-service
                port:
                  number: 8081
